<resources>
    <string name="app_name">Healthy</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">Register New Account</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="btn_calculate">CALCULATE</string>
    <string name="btn_back">BACK</string>
    <string name="btn_addWeight">Add Weight</string>
    <string name="btn_save">Save</string>
    <string name="recoreding_date">Recording date</string>
    <string name="email">Email</string>
    <string name="repassword">Re-Password</string>
</resources>
