<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="35dp">

        <Button
            android:id="@+id/weight_form_back_btn"
            android:text="@string/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/weight_form_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recoreding_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/weight_form_weight"
            android:layout_width="match_parent"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/weight_form_save_btn"
            android:text="@string/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>